fix some mobile layout bugs

--- a/src/assets/scss/main.scss
+++ b/src/assets/scss/main.scss
@@ -181,6 +181,13 @@ body{
   filter: invert(1);
 }
 
+@mixin chrome-styles {
+  @media screen and (-webkit-min-device-pixel-ratio:0)
+    and (min-resolution:.001dpcm) {
+      @content;
+  }
+}
+
 @media (min-width:976px) and (max-width:1439px) {
   .price-size {
     font-size: 10px;
@@ -188,10 +195,32 @@ body{
   }
 }
 
+@media (max-width:767px) {
+  .product-detail {
+    position: fixed;
+    width: 100%;
+  }
+}
 @media (max-width:576px) {
   .loading-message{
     bottom: -24px 
   } 
+  .product-detail {
+    position: fixed;
+    width: 100%;
+    /*height: 670px;*/
+  }
+  @include chrome-styles {
+    .product-detail{
+      padding-right: 32px;
+    }
+  }
+  .notification{
+    position: absolute;
+    width: 98%;
+    left: 6px;
+    top: 3px;
+  }
 }
 
 // *****************************************
